--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "react-fundamentals"]
 	path = react-fundamentals
 	url = https://github.com/JamesWJager/react-fundamentals
+[submodule "react-hooks"]
+	path = react-hooks
+	url = git@github.com:JamesWJager/react-hooks.git
