--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     },
     "scripts": {
       "start:fundamentals": "cd react-fundamentals/ && npm start",
+      "start:hooks": "cd react-hooks/ && npm start",
+      "init:reactFundamentals": "git clone https://github.com/kentcdodds/react-fundamentals.git && cd react-fundamentals/ && npm run setup --silent",
       "init:reactHooks": "git clone https://github.com/kentcdodds/react-hooks.git && cd react-hooks/ && npm run setup --silent"
     },
     "repository": {
